--- a/public/403.html
+++ b/public/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Forbidden (403)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -55,11 +55,11 @@
 </head>
 
 <body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
+  <!-- This file lives in public/403.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist (404)</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Forbidden (403)</h1>
+      <p>You don't have permission to access this page.</p>
     </div>
     <p>If you believe this is an error, please contact the administrator.</p>
   </div>
